# tracer

./: CMakeLists.txt  LICENSE  compile_flags.txt  protocol.md  test.html
cmake/: FindSOIL.cmake
src/: camera.cpp  camera.h  entity.cpp  entity.h  envmap.cpp  envmap.h  exceptions.h  light.h  make_scene.cpp  make_scene.h  object.h  ray.h  scene.h  sphere.cpp  sphere.h  texture.cpp  texture.h  trace_server.cpp  trace_test.cpp
